# dbus-introspect

./: COPYING  Makefile.am  Makefile.in  configure  configure.ac  wscript
debian/: changelog  control  copyright
src/: Makefile.am  Makefile.in  dbus_introspect.c  dbus_introspect.vala  dbus_introspect_util.vapi  wscript
